force-app/main/default/objects/FinServ__Employment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment</relationshipLabel>
    <relationshipName>Employment</relationshipName>
    <type>Lookup</type>
</CustomField>