force-app/main/default/objects/FinServ__Employment__c/fields/Assessment_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Assessment_of_Business__c</fullName>
    <description>Self employed</description>
    <label>Assessment of Business  Fin Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName
        >Good growth and or profit trends for 3 - 4 years</fullName>
                <label>Good growth and or profit trends for 3 - 4 years</label>
            </value>
            <value>
                <fullName
        >Good growth and or profit trends for up to 2 years</fullName>
                <label
        >Good growth and or profit trends for up to 2 years</label>
            </value>
            <value>
                <fullName>Inconsistent profit/growth trends</fullName>
            </value>
            <value>
                <fullName>Inadequate growth and/or profit trends</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>