force-app/main/default/objects/FinServ__Employment__c/fields/Assessment_of_Business_Working_Capita__c.field-meta.xml
<CustomField>
    <fullName>Assessment_of_Business_Working_Capita__c</fullName>
    <description>Self employed persons</description>
    <label>Assessment of Business Working Capita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
            <value>
                <fullName>Not Adequate</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>