force-app/main/default/objects/FinServ__Employment__c/fields/Assessment_of_Statement__c.field-meta.xml
<CustomField>
    <fullName>Assessment_of_Statement__c</fullName>
    <label>Assessment of Business Fin Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Supported</fullName>
            </value>
            <value>
                <fullName>Adequately Supported</fullName>
            </value>
            <value>
                <fullName>Sound Business Plan, Skill and Professional Competence</fullName>
            </value>
            <value>
                <fullName>Weak Support or Doubtful</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>