force-app/main/default/objects/FinServ__Employment__c/fields/Business_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Business_Number_1__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Business Number 1</label>
    <type>Phone</type>
</CustomField>