force-app/main/default/objects/FinServ__Employment__c/fields/Business_Number_2_prev__c.field-meta.xml
<CustomField>
    <fullName>Business_Number_2_prev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Number 2</label>
    <type>Phone</type>
</CustomField>