force-app/main/default/objects/FinServ__Employment__c/fields/City_Town__c.field-meta.xml
<CustomField>
    <fullName>City_Town__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>City/Town</label>
    <length>40</length>
    <type>Text</type>
</CustomField>