force-app/main/default/objects/FinServ__Employment__c/fields/Country_prev__c.field-meta.xml
<CustomField>
    <fullName>Country_prev__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>