force-app/main/default/objects/FinServ__Employment__c/fields/Current_Employment__c.field-meta.xml
<CustomField>
    <fullName>Current_Employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Employment</label>
    <type>Checkbox</type>
</CustomField>