force-app/main/default/objects/FinServ__Employment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>