force-app/main/default/objects/FinServ__Employment__c/fields/Employment_Description__c.field-meta.xml
<CustomField>
    <fullName>Employment_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employment Description</label>
    <type>TextArea</type>
</CustomField>