force-app/main/default/objects/FinServ__Employment__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description
  >Created to replace the first Employment Status picklist with incorrect values.</description>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Pensioner</fullName>
                <isActive>false</isActive>
                <label>Pensioner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>