force-app/main/default/objects/FinServ__Employment__c/fields/Financial_Preformance__c.field-meta.xml
<CustomField>
    <fullName>Financial_Preformance__c</fullName>
    <label>Financial Preformance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good growth and or profit trends for 3-4 years</fullName>
            </value>
            <value>
                <fullName>Good growth and or profit trends for up to 2 years</fullName>
            </value>
            <value>
                <fullName>Inconsistent profit/growth trends</fullName>
            </value>
            <value>
                <fullName>Inadequate growth and or profit trends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>