force-app/main/default/objects/FinServ__Employment__c/fields/Financial_Statement_Support__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement_Support__c</fullName>
    <label>Financial Statement Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Supported</fullName>
            </value>
            <value>
                <fullName>Adequately Supported</fullName>
            </value>
            <value>
                <fullName
        >Sound Business Plan, Skill and Professional Competence</fullName>
                <label
        >Sound Business Plan, Skill and Professional Competence</label>
            </value>
            <value>
                <fullName>Weak Support or Doubtful</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>