force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EmploymentStatus__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Employed</fullName>
                <isActive>false</isActive>
                <label>Employed</label>
            </value>
            <value>
                <fullName>Home Maker</fullName>
                <isActive>false</isActive>
                <label>Home Maker</label>
            </value>
            <value>
                <fullName>Pensioner</fullName>
                <isActive>false</isActive>
                <label>Pensioner</label>
            </value>
            <value>
                <fullName>Retired</fullName>
                <isActive>false</isActive>
                <label>Retired</label>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
                <isActive>false</isActive>
                <label>Self-Employed</label>
            </value>
            <value>
                <fullName>Student</fullName>
                <isActive>false</isActive>
                <label>Student</label>
            </value>
            <value>
                <fullName>Unemployed with Income</fullName>
                <isActive>false</isActive>
                <label>Unemployed with Income</label>
            </value>
            <value>
                <fullName>Unemployed without Income</fullName>
                <isActive>false</isActive>
                <label>Unemployed without Income</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>