force-app/main/default/objects/FinServ__Employment__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>