force-app/main/default/objects/FinServ__Employment__c/fields/Industry_prev__c.field-meta.xml
<CustomField>
    <fullName>Industry_prev__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Category_IFRS_Employed</valueSetName>
    </valueSet>
</CustomField>