force-app/main/default/objects/FinServ__Employment__c/fields/Length_of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Trade__c</fullName>
    <label>Length of Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More than 5 years</fullName>
            </value>
            <value>
                <fullName>Between 3-5 years</fullName>
            </value>
            <value>
                <fullName>Between 1-3 years</fullName>
            </value>
            <value>
                <fullName>Less than a 1 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>