force-app/main/default/objects/FinServ__Employment__c/fields/Name_of_Previous_Employer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Previous_Employer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Previous Employer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>