force-app/main/default/objects/FinServ__Employment__c/fields/Nature_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Engagement__c</fullName>
    <label>Nature of Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nature_of_Engagement_Self_Employed</valueSetName>
    </valueSet>
</CustomField>