force-app/main/default/objects/FinServ__Employment__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position/Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>