force-app/main/default/objects/FinServ__Employment__c/fields/Position_Previously_Held__c.field-meta.xml
<CustomField>
    <fullName>Position_Previously_Held__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position Previously Held</label>
    <length>40</length>
    <type>Text</type>
</CustomField>