force-app/main/default/objects/FinServ__Employment__c/fields/Post_Office_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Office_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Office/Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>