force-app/main/default/objects/FinServ__Employment__c/fields/Time_Employed_in_Present_Employer_M__c.field-meta.xml
<CustomField>
    <fullName>Time_Employed_in_Present_Employer_M__c</fullName>
    <label>Time Employed in Present Employer M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>