force-app/main/default/objects/FinServ__Employment__c/fields/Time_Employed_in_Present_Industry_Months__c.field-meta.xml
<CustomField>
    <fullName>Time_Employed_in_Present_Industry_Months__c</fullName>
    <label>Time Employed in Present Industry Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>