force-app/main/default/objects/FinServ__Employment__c/fields/Time_Employed_with_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Time_Employed_with_Current_Employer__c</fullName>
    <description>Time employed with Current Employer</description>
    <label>Time Employed with Current Employer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>