force-app/main/default/objects/FinServ__Employment__c/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <label>Type of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Business</valueSetName>
    </valueSet>
</CustomField>