force-app/main/default/objects/FinServ__Employment__c/fields/Were_you_previously_employed__c.field-meta.xml
<CustomField>
    <fullName>Were_you_previously_employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Were you previously employed?</label>
    <type>Checkbox</type>
</CustomField>