force-app/main/default/objects/FinServ__Employment__c/recordTypes/Employed.recordType-meta.xml
<RecordType>
    <fullName>Employed</fullName>
    <active>true</active>
    <label>Employed</label>
</RecordType>