force-app/main/default/objects/FinServ__Employment__c/recordTypes/Self_Employed.recordType-meta.xml
<RecordType>
    <fullName>Self_Employed</fullName>
    <active>true</active>
    <label>Self-Employed</label>
</RecordType>